# finsim

./: .coderabbit.yaml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_STATUS.md  QUICKSTART.md  README.md
.github/: IMPLEMENTATION_SUMMARY.md  QUICKSTART_WORKFLOW.md  WORKFLOWS.md  copilot-instructions.md  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: adding-document.md  feature_request.md
.github/agents/: developer.agent.md
.github/workflows/: manual-checks.yml  post-merge.yml  pr-automation.yml
app/: .env.example  .gitignore  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vitest.config.ts
app/src/: app.css  app.d.ts  app.html  hooks.server.ts
app/src/lib/auth/: client.ts  (+1 more)
app/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
app/static/: robots.txt
app/tests/: auth.spec.ts  landing-page.spec.ts
app/wasm-simulation/: Cargo.toml  README.md
app/wasm-simulation/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  AUTHENTICATION.md  BUILD_FIX_SUMMARY.md  BUILD_ISSUES.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_CREDENTIALS.md  README.md  TAILWIND_V4_FIX.md  USER_GUIDE.md
landing/: .gitignore  astro.config.mjs  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tailwind.config.mjs
landing/public/: robots.txt
landing/src/: app.css
landing/src/components/: CTA.astro  Docs.astro  Features.astro  Footer.astro  Header.astro  Hero.astro  Pricing.astro
landing/src/layouts/: Layout.astro
spec/: DATA_MODEL.md  README.md  REQUIREMENTS.md  SECURITY.md
(+57 files in other folders)
