[package]
name = "finsim_simulation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[features]
default = ["console_error_panic_hook"]
